--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 Hi user! my name is Colin and I really like to play games!
-I am excited for board game club where I can where my special outfit!
+I am excited for board game club where I can wear my special outfit!
