--- a/assignment1.html
+++ b/assignment1.html
@@ -2,7 +2,7 @@
 <html lan="en">
     <head> 
         <meta charset="UTF-8">
-        <title> Information Page </title>
+        <title> ISU's Creative Technology Information Page</title>
     </head>
 
     <body>
