--- a/assignment2/requirements.html
+++ b/assignment2/requirements.html
@@ -2,7 +2,7 @@
 <html lan="en">
     <head> 
         <meta charset="UTF-8">
-        <title> ISU's Creative Technology Requirement Page</title>
+        <title> ISU's CTK Requirement Page</title>
     </head>
 
     <body>
